fix: 修复跨域与好友请求处理异常